# Cheers

./: .gitignore  Cargo.toml  README.md  makefile
cheers/: Cargo.toml  makefile
cheers/src/: main.rs
cheers/src/uci/: macros.rs  mod.rs
cheers_bitboards/: Cargo.toml
cheers_bitboards/src/: lib.rs
cheers_datagen/: Cargo.toml
cheers_datagen/src/: main.rs
cheers_lib/: Cargo.toml
cheers_lib/benches/: perft_speed_test.rs
cheers_lib/src/: bitboard.rs  hash_tables.rs  history_tables.rs  lib.rs  lookup_tables.rs  move_sorting.rs  moves.rs  options.rs  search.rs  thread_data.rs  transposition_table.rs  types.rs  zobrist.rs
cheers_lib/src/board/: eval_params.rs  eval_types.rs  evaluate.rs  mod.rs  movegen.rs  see.rs  tb_adapter.rs
cheers_lib/src/chessgame/: eval_params.rs  eval_types.rs  evaluate.rs  fen.rs  mod.rs  movegen.rs  search.rs  see.rs
cheers_lib/src/chessgame copy/: eval_types.rs  evaluate.rs  fen.rs  mod.rs  movegen.rs  see.rs
cheers_pregen/: .gitignore  Cargo.toml  build.rs  lookup_tables_template.txt
cheers_pregen/src/: lib.rs  lookup_tables.rs  zobrist.rs
cheers_tuning/: .gitignore  Cargo.toml
cheers_tuning/src/: calculate_error.rs  data_extraction.rs  k_tuning.rs  main.rs  types.rs
src/: bitboard.rs  bitboards.rs  evaluate.rs  lookup_tables.rs  main.rs  moves.rs  piece_tables.rs  search.rs  time_management.rs  transposition_table.rs  types.rs  utils.rs  zobrist.rs
src/bitboards/: evaluate.rs  mod.rs  piece_tables.rs  search.rs
src/chessgame/: evaluate.rs  mod.rs  search.rs
