[workspace]
members = [
    "cheers_lib",
    "cheers",
    "cheers_tuning",
    "cheers_datagen",
    "cheers_bitboards",
    "cheers_pregen"
]

[profile.test]
debug = true
lto = true

[profile.release]
lto = true

[profile.production]
inherits = "release"
lto = true
codegen-units = 1
strip = "symbols"

