[package]
name = "cheers_lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "cheers_lib"
path = "src/lib.rs"

[dependencies]
bytemuck = { version = "1.9", features = ["min_const_generics", "derive"] }
cheers_bitboards = { path = "../cheers_bitboards" }
cheers_pregen = { path = "../cheers_pregen" }