[package]
name = "cheers_lib"
version = "0.3.1"
edition = "2021"

[lib]
name = "cheers_lib"
path = "src/lib.rs"

[features]
default = []
eval-tracing = ["dep:bytemuck"]

[dependencies]
bytemuck = { version = "1.9", features = [
    "min_const_generics",
    "derive",
], optional = true }
pyrrhic-rs = "0.2"
cheers_bitboards = { path = "../cheers_bitboards" }
cheers_pregen = { path = "../cheers_pregen" }
