[package]
name = "cheers_tuning"
version = "0.1.0"
authors = ["Sebastian Venter <sebastian.venter@gmail.com>"]
edition = "2021"

[[bin]]
name = "cheers_tuning"
path = "src/main.rs"

[dependencies.cheers_lib]
path = "../cheers_lib"

[dependencies]
clap = { version = "3.1", features = ["derive"] }
indicatif = { version = "0.16.2", features = ["rayon"] }
pgn-reader = "0.20"
rayon = "1.5"
